[gd_scene load_steps=6 format=3 uid="uid://cctm31a5mlmu7"]

[ext_resource type="PackedScene" uid="uid://bq86r4yll8po" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_fullglove_low.tscn" id="1_0i3lv"]
[ext_resource type="Script" path="res://scripts/player_vr.gd" id="1_ark1w"]
[ext_resource type="PackedScene" uid="uid://cqhw276realc" path="res://addons/godot-xr-tools/functions/function_pointer.tscn" id="2_c7aet"]
[ext_resource type="PackedScene" uid="uid://xqimcf20s2jp" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_fullglove_low.tscn" id="3_oear4"]
[ext_resource type="PackedScene" uid="uid://clc5dre31iskm" path="res://addons/godot-xr-tools/xr/start_xr.tscn" id="4_tef3j"]

[node name="XROrigin3D" type="XROrigin3D"]
script = ExtResource("1_ark1w")

[node name="XRCamera3D" type="XRCamera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.85, 0)

[node name="Mao_Esq" type="XRController3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, -0.4)
tracker = &"left_hand"

[node name="LeftHand" parent="Mao_Esq" instance=ExtResource("1_0i3lv")]

[node name="FunctionPointer" parent="Mao_Esq/LeftHand" instance=ExtResource("2_c7aet")]
show_target = true
collision_mask = 5242881

[node name="Mao_Dir" type="XRController3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, -0.4)
tracker = &"right_hand"

[node name="RightHand" parent="Mao_Dir" instance=ExtResource("3_oear4")]

[node name="StartXR" parent="." instance=ExtResource("4_tef3j")]

[connection signal="pointing_event" from="Mao_Esq/LeftHand/FunctionPointer" to="." method="_on_function_pointer_pointing_event"]
